--- a/index.css
+++ b/index.css
@@ -2,12 +2,12 @@ body {
     background-color: #FEFD0E;
 }
 
-.navblock {
+.ahnavblock {
     padding-top: 10px;
     padding-bottom: 40px;
 }
 
-.navlink {
+.ahnavlink {
     color: #464DAA;
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
@@ -17,30 +17,31 @@ body {
     padding-right: 20px;
 }
 
-.navicon {
+.ahnavicon {
     vertical-align: middle;
     width: 85px;
 }
 
-.socialfooter {
+.ahsocialfooter {
     padding-top: 20px;
     padding-bottom: 10px;
 }
 
-.socialicon {
+.ahsocialicon {
     display: inline-block; 
     padding-left: 10px;
     padding-right: 10px;
 }
 
-.bodytext {
+.ahbodytext {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 16px; 
 }
 
-.captiontext {
+.ahcaptiontext {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    font-size: 12px;    
+    font-size: 12px; 
+    color: #464DAA;  
 }
