--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@ body {
     background-color: #FEFD0E;
 }
 
+/*TOP NAV*/
+
 .ahnavblock {
     padding-top: 10px;
     padding-bottom: 40px;
@@ -13,14 +15,15 @@ body {
     font-weight: 900;
     font-size: 30px;
     display: inline-block; 
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
 }
 
 .ahnavicon {
     vertical-align: middle;
     width: 85px;
 }
+
+/*FOOTER*/
 
 .ahsocialfooter {
     padding-top: 20px;
@@ -31,6 +34,15 @@ body {
     display: inline-block; 
     padding-left: 10px;
     padding-right: 10px;
+}
+
+/*TEXT*/
+
+.ahheader {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 20px; 
+    color: #464DAA;  
 }
 
 .ahbodytext {
@@ -45,3 +57,4 @@ body {
     font-size: 12px; 
     color: #464DAA;  
 }
+
