--- a/index.css
+++ b/index.css
@@ -111,3 +111,23 @@ body {
     background-color:#5170fe;
     width: 335px
  }
+
+/*VIDEO PLAYER*/
+
+ .my-video {
+    position:relative;
+    padding-bottom:56.25%;
+    padding-top:30px;
+    height:0;
+    overflow:hidden;
+    }
+    
+    .my-video iframe, 
+    .my-video object, 
+    .my-video embed {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    }
