--- a/css/index.css
+++ b/css/index.css
@@ -63,6 +63,13 @@ body {
     font-size: 40px; 
 }
 
+.ahsection {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 25px; 
+    color: #74a629;  
+}
+
 .ahheader {
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
