--- a/css/index.css
+++ b/css/index.css
@@ -95,6 +95,14 @@ body {
     color: #5170fe;  
 }
 
+.ahdetailtext {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 14px; 
+  color: black;  
+}
+
+
 .ahactivecat {
     color: #5170fe;  
 }
@@ -106,44 +114,80 @@ body {
 }
 
 .ahcardfooter {
-    position:absolute;
-    bottom: 0;
-    right: 1rem;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 12px; 
-    color: #5170fe;
+  position:absolute;
+  bottom: 0;
+  right: 1rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 12px; 
+  color: #5170fe;
 }
 
 /*MODAL PLAYER*/
 
- .modal-content {
-    background-color:#5170fe;
-    width: 335px
- }
+.modal-content {
+  background-color:#5170fe;
+  width: 335px
+}
 
 /*VIDEO PLAYER*/
 
- .my-video {
-    position:relative;
-    padding-bottom:56.25%;
-    padding-top:30px;
-    height:0;
-    overflow:hidden;
-    }
+.my-video {
+  position:relative;
+  padding-bottom:56.25%;
+  padding-top:30px;
+  height:0;
+  overflow:hidden;
+}
     
-    .my-video iframe, 
-    .my-video object, 
-    .my-video embed {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    }
+.my-video iframe, 
+.my-video object, 
+.my-video embed {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
 
 /*FANCYBOX GALLERY*/
 
-    .ahfancymargin{
-        margin-top: 5px;
-       }
+.ahfancymargin{
+  margin-top: 5px;
+}
+
+/*TIMELINE*/
+
+.BeforeScroll{
+  display: block;
+  background-color:pink;
+}
+
+.AfterScroll{
+  display: block;
+  background-color:purple;
+}
+
+.ahtimelineyear {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 12px; 
+  color: #5170fe;  
+  text-align: center;
+}
+
+
+.ahrightslide {
+  animation-duration: 1s;
+  animation-name: slidein;
+}
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%; 
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
