--- a/css/index.css
+++ b/css/index.css
@@ -158,6 +158,32 @@ body {
 
 /*TIMELINE*/
 
+.ahvertical{
+  border-right: 10px solid black;
+  height: 100%;
+  position: relative;
+  margin-left: 50px;
+}
+
+
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  left: 8%;
+  z-index: -1;
+}
+
+
 .BeforeScroll{
   display: block;
   background-color:pink;
